--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "jshint": "2.9.3",
     "mocha": "3.2.0",
     "mocha-lcov-reporter": "1.2.0",
-    "should": "9.0.2"
+    "should": "9.0.2",
+    "coveralls": "2.12.0"
   },
   "engines": {
     "node": ">=0.8.6"
