--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ node_js:
 env:
   global:
     - COVERALLS_PARALLEL=true
-- COVERALLS_FLAG_NAME=test-1 make test-coveralls-1
-- COVERALLS_FLAG_NAME=test-2 make test-coveralls-2
+scripts:
+  - COVERALLS_FLAG_NAME=test-1 make test-coveralls-1
+  - COVERALLS_FLAG_NAME=test-2 make test-coveralls-2
 
 notifications:
   webhooks: https://coveralls.io/webhook
