--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ env:
   global:
     - COVERALLS_PARALLEL=true
 scripts:
-  - COVERALLS_FLAG_NAME=test-1 make test-coveralls-1
-  - COVERALLS_FLAG_NAME=test-2 make test-coveralls-2
+  - COVERALLS_FLAG_NAME=test-1 make test-coverage-1
+  - COVERALLS_FLAG_NAME=test-2 make test-coverage-2
 
 notifications:
   webhooks: https://coveralls.io/webhook
