--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ env:
     - COVERALLS_PARALLEL=true
 jobs:
   include:
-    - script: COVERALLS_FLAG_NAME=test-1 make test-coverage-1
-    - script: COVERALLS_FLAG_NAME=test-2 make test-coverage-2
+    - script: COVERALLS_FLAG_NAME=test-1 make test-coveralls-1
+    - script: COVERALLS_FLAG_NAME=test-2 make test-coveralls-2
 
 notifications:
   webhooks: https://coveralls.io/webhook
