--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,10 @@ jobs:
   include:
     - script: COVERALLS_FLAG_NAME=test-1 make test-coveralls-1
     - script: COVERALLS_FLAG_NAME=test-2 make test-coveralls-2
-
 notifications:
-  webhooks:
-    - https://coveralls.io/webhook
-    - https://enjb2kwz2o8k.x.pipedream.net
+  webhooks: https://coveralls.io/webhook
+
+#notifications:
+#  webhooks:
+#    - https://coveralls.io/webhook
+#    - https://enjb2kwz2o8k.x.pipedream.net
