--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "devDependencies": {
     "coveralls": "github:nickmerwin/node-coveralls#service-job-number",
     "istanbul": "0.4.5",
-    "jshint": "2.9.3",
-    "mocha": "3.2.0",
+    "jshint": "^2.11.0",
+    "mocha": "^7.1.1",
     "mocha-lcov-reporter": "1.2.0",
     "should": "9.0.2"
   },
