--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "test": "make test"
   },
   "devDependencies": {
-    "coveralls": "github:nickmerwin/node-coveralls#service-job-number",
+    "coveralls": "3.1.0",
     "istanbul": "0.4.5",
     "jshint": "^2.11.0",
     "mocha": "^7.1.1",
