--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  coveralls: coveralls/coveralls@dev:5
+  coveralls: coveralls/coveralls@1.0.5
   node: circleci/node@1.1.6
 
 jobs:
