--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,11 @@ node_js:
 env:
   global:
     - COVERALLS_PARALLEL=true
+    - COVERALLS_ENDPOINT=https://coveralls-nick.ngrok.io
+    - COVERALLS_REPO_TOKEN=Aff25AMpEmGTWwx9s0mjuakIe5AINw6H9
 jobs:
   include:
-    - script: COVERALLS_FLAG_NAME=test-1 make test-coveralls-1
-    - script: COVERALLS_FLAG_NAME=test-2 make test-coveralls-2
+    - script: COVERALLS_FLAG_NAME=test-1 npm run coveralls-1
+    - script: COVERALLS_FLAG_NAME=test-2 npm run coveralls-2
 notifications:
-  webhooks: https://coveralls.io/webhook
+  webhooks: https://coveralls-nick.ngrok.io/webhook
