--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "node-demo",
   "version": "0.0.1",
   "scripts": {
-    "test": "make test",
-    "coveralls": "nyc --exclude-node-modules=false --reporter=text-lcov npm run test | coveralls"
+    "test-1": "make test-1",
+    "test-2": "make test-2",
+    "coveralls-1": "nyc --exclude-node-modules=false --reporter=text-lcov npm run test-1 | coveralls",
+    "coveralls-2": "nyc --exclude-node-modules=false --reporter=text-lcov npm run test-2 | coveralls"
   },
   "devDependencies": {
     "coveralls": "3.1.0",
