--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "scripts": {
     "test-1": "make test-1",
     "test-2": "make test-2",
-    "coveralls-1": "nyc --exclude-node-modules=false --reporter=lcov npm run test-1; coveralls",
-    "coveralls-2": "nyc --exclude-node-modules=false --reporter=lcov npm run test-2; coveralls"
+    "coveralls-1": "nyc --exclude-node-modules=false --reporter=text-lcov npm run test-1 | coveralls",
+    "coveralls-2": "nyc --exclude-node-modules=false --reporter=text-lcov npm run test-2 | coveralls"
   },
   "devDependencies": {
     "coveralls": "3.1.0",
     "istanbul": "0.4.5",
-    "jshint": "^2.11.0",
-    "mocha": "^7.1.1",
+    "jshint": "^2.12.0",
+    "mocha": "^7.2.0",
     "mocha-lcov-reporter": "1.2.0",
     "nyc": "^15.1.0",
     "should": "9.0.2"
