--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "test-1": "make test-1",
     "test-2": "make test-2",
-    "coveralls-1": "nyc --reporter=text-lcov --exclude-node-modules=false npm run test-1 2>/dev/null | coveralls",
-    "coveralls-2": "nyc --reporter=text-lcov --exclude-node-modules=false npm run test-2 2>/dev/null | coveralls"
+    "coveralls-1": "nyc --reporter=text-lcov --exclude-node-modules=false npm run test-1 && coveralls < coverage/lcov.info ",
+    "coveralls-2": "nyc --reporter=text-lcov --exclude-node-modules=false npm run test-2 && coveralls < coverage/lcov.info"
   },
   "devDependencies": {
     "coveralls": "3.1.0",
