--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "test-1": "make test-1",
     "test-2": "make test-2",
-    "coveralls-1": "nyc --reporter=lcov --exclude-node-modules=false npm run test-1 && coveralls < coverage/lcov.info ",
+    "coveralls-1": "nyc --reporter=lcov --exclude-node-modules=false npm run test-1 && cat coverage/lcov.info && coveralls < coverage/lcov.info ",
     "coveralls-2": "nyc --reporter=lcov --exclude-node-modules=false npm run test-2 && coveralls < coverage/lcov.info"
   },
   "devDependencies": {
