--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ node_js:
 env:
   global:
     #    - COVERALLS_PARALLEL=true
-    - COVERALLS_ENDPOINT=https://coveralls-nick.ngrok.io
-    - COVERALLS_REPO_TOKEN=Aff25AMpEmGTWwx9s0mjuakIe5AINw6H9
+    #    - COVERALLS_ENDPOINT=https://coveralls-nick.ngrok.io
+    #    - COVERALLS_REPO_TOKEN=Aff25AMpEmGTWwx9s0mjuakIe5AINw6H9
 jobs:
   include:
-    - script: npm run coveralls
+    - script: npm run coveralls-dependencies
     #    - script: COVERALLS_FLAG_NAME=test-1 npm run coveralls-1
     #    - script: COVERALLS_FLAG_NAME=test-2 npm run coveralls-2
 notifications:
