--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,11 +12,15 @@ jobs:
           - 2
     steps:
       - uses: actions/checkout@master
+      - name: environment
+            run: |
+            echo "export COVERALLS_ENDPOINT=https://coveralls-nick.ngrok.io" > ~/.bashrc
+            echo "export COVERALLS_REPO_TOKEN=Aff25AMpEmGTWwx9s0mjuakIe5AINw6H9" > ~/.bashrc
       - uses: actions/setup-node@master
         with:
           version: 10.x
       - run: npm install
-      - run: make test-coverage-${{ matrix.test_number }}
+      - run: npm run coverage-${{ matrix.test_number }}
       - name: Coveralls
         uses: coverallsapp/github-action@v1.1.0
         env:
