--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,13 +20,14 @@ jobs:
         with:
           version: 10.x
       - run: npm install
-      - run: COVERALLS_ENDPOINT=https://coveralls-nick.ngrok.io COVERALLS_REPO_TOKEN=Aff25AMpEmGTWwx9s0mjuakIe5AINw6H9 make test-coveralls-${{ matrix.test_number }}
+      #      - run: COVERALLS_ENDPOINT=https://coveralls-nick.ngrok.io COVERALLS_REPO_TOKEN=Aff25AMpEmGTWwx9s0mjuakIe5AINw6H9 make test-coveralls-${{ matrix.test_number }}
+      - run: make test-coveralls-${{ matrix.test_number }}
       - name: Coveralls
         uses: coverallsapp/github-action@v1.1.0
         env:
           NODE_COVERALLS_DEBUG: 1
-          COVERALLS_REPO_TOKEN: Aff25AMpEmGTWwx9s0mjuakIe5AINw6H9
-          COVERALLS_ENDPOINT: https://coveralls-nick.ngrok.io
+          #          COVERALLS_REPO_TOKEN: Aff25AMpEmGTWwx9s0mjuakIe5AINw6H9
+          #          COVERALLS_ENDPOINT: https://coveralls-nick.ngrok.io
         with:
           github-token: ${{ secrets.github_token }}
           parallel: true
