--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,6 @@ sudo: false
 language: node_js
 node_js:
   - "node"
-env:
-  global:
-    - COVERALLS_PARALLEL=true
 jobs:
   include:
-    - script: COVERALLS_FLAG_NAME=test-1 make test-coveralls-1
-    - script: COVERALLS_FLAG_NAME=test-2 make test-coveralls-2
-notifications:
-  webhooks: https://coveralls.io/webhook
+    - script: make test-coveralls
