--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,10 @@
 version: 2.1
 
 orbs:
-  coveralls: coveralls/coveralls@1.0.5
   node: circleci/node@1.1.6
 
 jobs:
-  build-1:
+  build:
     executor:
       name: node/default
 
@@ -15,42 +14,11 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run: make test-coverage-1
+            - run: make test-coverage
 
-      - coveralls/upload:
-          parallel: true
-          flag_name: Test 1
-          verbose: true
-
-  build-2:
-    executor:
-      name: node/default
-
-    steps:
-      - checkout
-
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: make test-coverage-2
-
-      - coveralls/upload:
-          parallel: true
-          flag_name: Test 2
-          verbose: true
-
-  done:
-    executor:
-      name: node/default
-
-    steps:
-      - coveralls/upload:
-          parallel_finished: true
+      - run: wget -c -q https://github.com/coverallsapp/coverage-reporter/releases/download/0.1.3/coveralls-linux.tar.gz -O - | tar -xz && ./coveralls
 
 workflows:
-  test_parallel_then_upload:
+  test_then_upload:
     jobs:
-      - build-1
-      - build-2
-      - done:
-          requires: [build-1, build-2]
+      - build
