--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,8 +1,8 @@
+name: Test (Linux)
+
 on:
   push:
   pull_request:
-
-name: build
 
 jobs:
   test:
@@ -16,23 +16,13 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
         with:
-          version: 10.x
+          version: 16.x
       - run: npm install
       - run: make test-coverage-${{ matrix.test_number }}
       - name: Coveralls
         uses: coverallsapp/github-action@v1
-        env:
-          NODE_COVERALLS_DEBUG: 1
         with:
           parallel: true
-          flag-name: run-${{ matrix.test_number }}
+          flag-name: linux-${{ matrix.test_number }}
+          debug: true
 
-  finish:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Coveralls Finished
-        uses: coverallsapp/github-action@v1
-        with:
-          parallel-finished: true
-          carryforward: "run-1,run-2"
