--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -21,6 +21,8 @@ jobs:
       - run: make test-coverage-${{ matrix.test_number }}
       - name: Coveralls
         uses: coverallsapp/github-action@v1
+        env:
+          COVERALLS_SERVICE_NUMBER: ${{ github.sha }}
         with:
           parallel: true
           flag-name: linux-${{ matrix.test_number }}
