--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,57 +1,57 @@
 version: 2.1
 
-orbs:
-  coveralls: coveralls/coveralls@2.0.0
-  node: circleci/node@1.1.6
+# orbs:
+#   coveralls: coveralls/coveralls@2.0.0
+#   node: circleci/node@1.1.6
 
-jobs:
-  build-1:
-    executor:
-      name: node/default
+# jobs:
+#   build-1:
+#     executor:
+#       name: node/default
 
-    steps:
-      - checkout
+#     steps:
+#       - checkout
 
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: make test-coverage-1
+#       - node/with-cache:
+#           steps:
+#             - run: npm install
+#             - run: make test-coverage-1
 
-      - coveralls/upload:
-          parallel: true
-          flag_name: Test 1
-          verbose: true
+#       - coveralls/upload:
+#           parallel: true
+#           flag_name: Test 1
+#           verbose: true
 
-  build-2:
-    executor:
-      name: node/default
+#   build-2:
+#     executor:
+#       name: node/default
 
-    steps:
-      - checkout
+#     steps:
+#       - checkout
 
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: make test-coverage-2
+#       - node/with-cache:
+#           steps:
+#             - run: npm install
+#             - run: make test-coverage-2
 
-      - coveralls/upload:
-          parallel: true
-          flag_name: Test 2
-          verbose: true
+#       - coveralls/upload:
+#           parallel: true
+#           flag_name: Test 2
+#           verbose: true
 
-  done:
-    executor:
-      name: node/default
+#   done:
+#     executor:
+#       name: node/default
 
-    steps:
-      - coveralls/upload:
-          parallel_finished: true
-          carryforward: "Test 1,Test 2"
+#     steps:
+#       - coveralls/upload:
+#           parallel_finished: true
+#           carryforward: "Test 1,Test 2"
 
-workflows:
-  test_parallel_then_upload:
-    jobs:
-      - build-1
-      - build-2
-      - done:
-          requires: [build-1, build-2]
+# workflows:
+#   test_parallel_then_upload:
+#     jobs:
+#       - build-1
+#       - build-2
+#       - done:
+#           requires: [build-1, build-2]
