--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,24 @@
-sudo: false
+---
+os: linux
+dist: jammy
+
 language: node_js
-node_js:
-- "node"
+node_js: lts/*
+cache:
+  directories: ~/.npm
+
+before_script: npm install -g npm@latest
+
 env:
   global:
   - COVERALLS_PARALLEL=true
+
+install: npm ci
+
 jobs:
   include:
   - script: npm test -- test/run1.js && COVERALLS_FLAG_NAME=test-1 npm run upload-coverage
   - script: npm test -- test/run2.js && COVERALLS_FLAG_NAME=test-2 npm run upload-coverage
+
 notifications:
   webhooks: https://coveralls.io/webhook
