--- a/.github/workflows/coveralls-standalone.yml
+++ b/.github/workflows/coveralls-standalone.yml
@@ -34,5 +34,6 @@ jobs:
 
     - uses: coverallsapp/github-action@v2
       with:
+        coveralls-endpoint: https://beta.coveralls.io
         format: lcov
         debug: true
